fixed image width overflow

--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -43,6 +43,10 @@
     padding-bottom: 12px;
 }
 
+.post-upload-container img {
+    width: 100%;
+}
+
 
 
 
